hopr/builder/tests/snapshots/session_integration_tests__bob_metrics_tcp_seg.snap
---
source: hopr/builder/tests/session_integration_tests.rs
expression: snapshot
---
session_id:
  tag: 1
  pseudonym: "[pseudonym]"
snapshot_at_ms: 1772543893239
lifetime:
  created_at_ms: 1772543893178
  last_activity_at_ms: 1772543893180
  uptime_ms: 60
  idle_ms: 58
  state: Active
  pipeline_errors_total: 0
frame:
  mtu_bytes: 1500
  timeout_ms: 800
  frame_capacity: 16384
  being_assembled: 0
  completed_total: 7
  emitted_total: 7
  discarded_total: 0
ack:
  mode: None
  incoming_segments_total: 13
  incoming_retransmission_requests_total: 0
  incoming_acknowledged_frames_total: 0
  outgoing_segments_total: 0
  outgoing_retransmission_requests_total: 0
  outgoing_acknowledged_frames_total: 0
surb:
  produced_total: 0
  consumed_total: 0
  buffer_estimate: 0
  target_buffer: 0
  rate_per_sec: 0
  refill_in_flight: false
transport:
  bytes_in_total: 9313
  bytes_out_total: 0
  packets_in_total: 13
  packets_out_total: 0
